##
##  Copyright (C) 2007 Lasse Collin
##
##  This library is free software; you can redistribute it and/or
##  modify it under the terms of the GNU Lesser General Public
##  License as published by the Free Software Foundation; either
##  version 2.1 of the License, or (at your option) any later version.
##
##  This library is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
##  Lesser General Public License for more details.
##

nobase_include_HEADERS = \
	lzma.h \
	lzma/base.h \
	lzma/block.h \
	lzma/check.h \
	lzma/container.h \
	lzma/delta.h \
	lzma/filter.h \
	lzma/index.h \
	lzma/index_hash.h \
	lzma/init.h \
	lzma/lzma.h \
	lzma/simple.h \
	lzma/stream_flags.h \
	lzma/subblock.h \
	lzma/version.h \
	lzma/vli.h
