## SPDX-License-Identifier: 0BSD
## Author: Lasse Collin

nobase_include_HEADERS = \
	lzma.h \
	lzma/base.h \
	lzma/bcj.h \
	lzma/block.h \
	lzma/check.h \
	lzma/container.h \
	lzma/delta.h \
	lzma/filter.h \
	lzma/hardware.h \
	lzma/index.h \
	lzma/index_hash.h \
	lzma/lzma12.h \
	lzma/stream_flags.h \
	lzma/version.h \
	lzma/vli.h
